--- a/styles/bio.css
+++ b/styles/bio.css
@@ -468,6 +468,14 @@ body {
     display: none;
   }
 }
+@media (min-width: 1280px) {
+  .footer-lower__header {
+    padding-right: 1vw;
+  }
+  .footer-lower__copyright {
+    padding-left: 12vh;
+  }
+}
 
 .footer-mobile {
   display: none;
@@ -513,6 +521,14 @@ body {
     align-items: baseline;
   }
 }
+@media (min-width: 1280px) {
+  .footer-mobile {
+    padding: 1rem 7vw;
+  }
+  .footer-mobile__header {
+    color: white;
+  }
+}
 
 .footer-tablet__team {
   display: none;
@@ -535,6 +551,11 @@ body {
   .footer-tablet__team__right {
     display: flex;
     flex-direction: column;
+  }
+}
+@media (min-width: 1280px) {
+  .footer-tablet__team {
+    padding: 0 12vh;
   }
 }
 
