--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -35,7 +35,7 @@ body {
     align-items: center;
     color: white;
 
-    
+
 
     @include tablet {
         justify-content: flex-start;
@@ -58,7 +58,7 @@ body {
             // justify-content: center;
             align-content: center;
             align-items: baseline;
-            
+
         }
 
         &__menu-tablet {
@@ -96,9 +96,9 @@ body {
 
     }
 
-    @include desktop{
+    @include desktop {
         align-items: center;
-        
+
     }
 
     &-top {
@@ -109,7 +109,8 @@ body {
         font-family: global.$avenirnext-regular ;
         margin: 0.5rem 0 0 0;
         text-transform: uppercase;
-        @include desktop{
+
+        @include desktop {
             padding-left: 10rem;
             font-size: 36px;
         }
@@ -122,7 +123,8 @@ body {
         // background: blue;
         width: 100%;
         justify-content: space-between;
-        @include desktop{
+
+        @include desktop {
             font-size: 1rem;
         }
     }
@@ -205,8 +207,8 @@ body {
         }
     }
 
-    @include desktop{
-        &__header{
+    @include desktop {
+        &__header {
             padding-left: 10rem;
             font-size: 60px;
             line-height: 68px;
@@ -347,15 +349,16 @@ body {
         }
     }
 
-    @include desktop{
+    @include desktop {
         &__header {
-            margin-left:15rem; 
+            margin-left: 15rem;
         }
+
         &__img-band-tablet {
             width: 50%;
         }
 
-        &__qoute{
+        &__qoute {
             margin: 0.25rem 30vw 0.25rem 25vw;
             text-align: left;
             //trbl
@@ -373,14 +376,14 @@ body {
             line-height: 32px;
             // margin: 0 1rem 1rem 1rem;
             //trbl
-    
+
         }
 
-        .paragraph-left{
+        .paragraph-left {
             padding-left: 20vw;
         }
 
-        .paragraph-right{
+        .paragraph-right {
             padding-right: 20vw;
         }
 
@@ -460,15 +463,16 @@ body {
         }
     }
 
-    @include desktop{
+    @include desktop {
 
-        &__header{
+        &__header {
             font-size: 36px;
             line-height: 44px;
             padding-left: 10rem;
 
         }
-        &__tablet{
+
+        &__tablet {
             margin: 1rem 10rem;
         }
     }
@@ -599,10 +603,17 @@ body {
             // display: none;
             @include global.display-none;
         }
+
+        @include desktop {
+            &__header {
+                padding-right: 1vw;
+            }
+
+            &__copyright {
+                padding-left: 12vh;
+            }
+        }
     }
-
-
-
 
 }
 
@@ -663,6 +674,14 @@ body {
         }
 
     }
+
+    @include desktop {
+        padding: 1rem 7vw;
+
+        &__header {
+            color: white;
+        }
+    }
 }
 
 .footer-tablet__team {
@@ -684,6 +703,10 @@ body {
         &__right {
             @include global.flexBox-column;
         }
+    }
+
+    @include desktop {
+        padding: 0 12vh;
     }
 
 }
