--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -43,7 +43,7 @@ body {
         flex-direction: row;
 
         // padding-left: 1rem;
-        &-top {
+        &__top {
             align-items: baseline;
             align-content: center;
             justify-content: center;
