--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -595,6 +595,7 @@ body {
     &-right {
       @include global.flexBox-row;
       align-items: baseline;
+      padding-right: 1rem;
     }
   }
 
@@ -676,8 +677,8 @@ body {
 
   &__img {
     border-radius: 50%;
-    width: 3rem;
-    height: 3rem;
+    width: 2.25rem;
+    height: 2.25rem;
     display: flex;
     flex-direction: row;
     background: url(../assets/images/Mohan-muruge.jpg);
@@ -685,6 +686,11 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+    @include tablet{
+      width: 3rem;
+      height: 3rem;
+    }
   }
 
   &__left {
@@ -886,19 +892,40 @@ body {
   // opacity: 20%;
   // height: auto;
 
+  &--soundcloud{
+    // @include global.flexBox-column;
+    // align-items: flex-start;
+    // justify-content: center;
+    // width: 100%;
+    @include tablet {
+
+
+      @include global.flexBox-column;
+      align-items: flex-start;
+      justify-content: center;
+      width: 70%;
+      // background-color: green;
+      }
+
+      @include desktop{
+        width: 100%;
+      }
+  }
 
   &--small {
     color: white;
     font-family: global.$avenirnext-demi;
     text-transform: capitalize;
     padding-left: 1rem;
+    font-size: 24px;
+    line-height: 32px;
   }
 
   &--larger {
     padding-left: 1rem;
     padding-right: 5rem;
     color: white;
-    font-family: global.$avenirnext-bold;
+    font-family: global.$avenirnext-demi;
     text-transform: capitalize;
     font-size: 36px;
     line-height: 44px;
@@ -908,6 +935,20 @@ body {
 
 .soundcloud-iframe {
   padding: 1rem 1rem 2rem 1rem;
+
+  // @include tablet{
+  //   background: blue;
+  // }
+
+  @include tablet{
+    width: 70%;
+    // background-color: blue;
+    padding: 1rem 2rem;
+  }
+
+  @include desktop{
+    // background-color: lightblue; 
+  }
 }
 
 
@@ -918,6 +959,13 @@ body {
   flex-wrap: nowrap;
   padding-top: 1.5rem;
   padding: 1.5rem 1rem 0 1rem;
+
+  
+
+  
+  &--tablet-header{
+    @include global.flexBox-row;
+  }
 
   &__header {
     font-family: global.$avenirnext-demi;
@@ -935,10 +983,21 @@ body {
     margin: 0;
     border-bottom: 1.5px global.$silver solid;
 
+    @include tablet{
+      @include global.flexBox-row;
+      padding: 1rem;
+      align-items: baseline;
+      justify-content: space-between;
+      align-content: center;
+    }
+
     &--header {
       font-family: global.$avenirnext-regular;
       color: global.$silver;
       text-transform: uppercase;
+      @include tablet{
+        display: none;
+      }
     }
 
     &--date {
@@ -971,6 +1030,29 @@ body {
       text-align: center;
       text-transform: uppercase;
       margin: 1rem 0;
+
+      @include tablet{
+        padding: 0.75rem 2rem;
+        margin: 1rem;
+        border: 1px global.$bandsite-black solid;
+        width: auto;
+      }
+    }
+
+    &--tablet{
+      display: none;
+      @include tablet{
+      padding-left: 1rem;
+      @include global.flexBox-row;
+      justify-content: space-between;
+      // width: 50%;
+      }
+
+      &-header{
+      font-family: global.$avenirnext-regular;
+      color: global.$silver;
+      text-transform: uppercase;
+      }
     }
   }
 }
