--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -655,6 +655,12 @@ body {
   flex-direction: column;
   background-color: white;
   justify-content: center;
+  @include desktop{
+    // text-align: left;
+    display: flex;
+    align-items: center;
+  // padding-left: 10rem;
+  }
 
   &__header {
     font-family: global.$avenirnext-demi;
@@ -662,6 +668,13 @@ body {
     margin: 1rem 0 0 1rem;
     font-size: 24px;
     line-height: 32px;
+    @include desktop{
+      padding-left: 10rem;
+      display: flex;
+      align-items: flex-start;
+      font-size: 32px;
+      width: 100%;
+    }
   }
 
   &__form {
@@ -671,8 +684,10 @@ body {
     padding-right: 1rem;
     justify-content: baseline;
     // border-bottom: 1.5px global.$silver solid;
-
-
+    @include desktop{
+      width: 50%;
+      justify-content: center;
+    }
   }
 
   &__img {
@@ -825,6 +840,9 @@ body {
     @include tablet {
       // background-color: blue;
       padding-left: 3rem;
+    }
+    @include desktop{
+      width: 50%;
     }
 
     &--container {
